--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,12 @@
             <version>0.7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.openjdk.jol</groupId>
+            <artifactId>jol-core</artifactId>
+            <version>0.9</version>
+        </dependency>
+
     </dependencies>
 
     <build>
